styles/Animals.module.css
.container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-image: url("/farmland.jpeg");
  background-repeat: no-repeat;
  background-size: cover;
  height: 50rem;
}

.accordion-item {
  display: flex;
  flex-direction: column;
  font-size: 1.5rem;
  margin: 1rem;
}

.accordion-title {
  display: flex;
  padding: 1.5rem;
  justify-content: space-between;
  background-color: rgba(167, 121, 68, 0.363);
  color: rgb(85, 85, 85);
}

.animalText {
  height: 18rem;
  background-color: rgba(15, 15, 15, 0.4);
  padding: 1rem 3rem;
  margin: 10rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  color: white;
}

.animalText a {
  background-color: rgba(15, 15, 15, 0.4);
  text-decoration: none;
  border: none;
  font-size: 1.5rem;
  padding: 1rem 1.5rem;
}

.animalDetails {
  display: flex;
  height: 40rem;
}

.biologyCard h1 {
  margin-left: 1rem;
  margin-bottom: 0rem;
  color: rgb(85, 85, 85);
}

.biologyCard img {
  border-radius: 10px;
}

.biologyCard p {
  margin-left: 1rem;
  margin-top: 0.5rem;
  color: gray;
  font-size: 1.1rem;
}

.bioInfo {
  display: flex;
  margin: 2.5rem;
  align-items: center;
  width: 100%;
  height: 350px;

  /* margin-left: 10%; */
}

.bioInfo img {
  height: 350px;
  width: 340px;
}

.biologyCard {
  display: flex;
  flex-direction: column;
  /* border-radius: 30px; */
  background-color: rgba(167, 121, 68, 0.363);
  /* padding: 1rem; */

  margin-bottom: -34px;
}

.infoCard {
  padding: 1rem;
  background-color: rgba(167, 121, 68, 0.363);
  width: 37%;
  height: 100%;
  color: rgb(85, 85, 85);
  border-radius: 10px;
  margin-left: 20px;
  margin-bottom: -30px;
}

.barCard {
  /* padding: 1rem; */
  /* background-color: rgba(197, 193, 188, 0.363); */
  width: 40%;
  height: 100%;
  border-radius: 10px;
  margin-left: 10px;
  margin-bottom: -30px;
}

.infoCard p {
  font-size: 1.3rem;
}

.infoSection {
  display: flex;
  height: 40rem;
  padding: 1rem;
  overflow: auto;
  justify-content: center;
}

.animalImpactSection {
  display: flex;
  padding: 2rem;
  justify-content: space-between;
  overflow-x: auto;
}

.animalImpactCard {
  background-color: white;
  border-radius: 0.25rem;
  box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
  display: flex;
  flex-direction: column;
  width: 350px;
  margin: 1rem;
  height: 400px;
  justify-content: flex-start;
}

.animalImpactCard button {
  border: 1px solid rgba(167, 121, 68, 0.363);
  margin: 1rem;
  display: flex;
  justify-content: center;
  padding: 0.5rem;
  width: 93%;
  color: rgb(85, 85, 85);
  background-color: rgba(167, 121, 68, 0.363);
}

.controlHeader {
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
  height: 250px;
  width: 100%;
  filter: contrast(60%);
  transition: filter 0.5s cubic-bezier(0.43, 0.41, 0.22, 0.91);
}

.animalImpactCard img:hover {
  filter: contrast(100%);
}

.animalImpactCard img {
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
  height: 200px;
  filter: contrast(95%);
  transition: filter 0.5s cubic-bezier(0.43, 0.41, 0.22, 0.91);
}

.animalImpactCard img:hover {
  filter: contrast(100%);
}

.animalImpactTitle {
  padding-left: 1rem;
  padding-top: 1rem;
  color: gray;
  font-size: 1.25rem;
  font-weight: 300;
  letter-spacing: 2px;
  text-transform: uppercase;
}

.animalImpactCard p {
  padding: 1rem;
  color: gray;
  font-size: 1.1rem;
}

.controlContainer {
  width: 85%;
  position: relative;
  /* left: 15%; */
}
.containerAll {
  /* height: 100vh; */
  width: 100%;
  /* margin-left: 12%; */
  flex-direction: row;
  display: flex;
  margin-bottom: 20px;
}
.containerMenu {
  width: 14%;
  flex-direction: column;
  align-items: center;
}

.controlSection {
  display: flex;
}

.genericControlCard {
  background-color: white;
  border-radius: 0.25rem;
  box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
  display: flex;
  flex-direction: column;
  width: 400px;
  margin: 1rem;
  height: 500px;
  justify-content: space-between;
}

.genericControlCard button {
  border: 1px solid rgba(167, 121, 68, 0.363);
  margin: 1rem;
  display: flex;
  justify-content: center;
  padding: 0.5rem;
  width: 93%;
  color: rgb(85, 85, 85);
  background-color: rgba(167, 121, 68, 0.363);
}

.genericControlCard p {
  padding: 1rem;
  color: gray;
  font-size: 1.1rem;
}

.menu {
  position: fixed;

  /* margin-top: 20%; */
  bottom: 50px;
}

@media only screen and (max-width: 750px) {
  .infoGrid {
    display: flex;
    flex-direction: column;
  }
}

.loading {
  margin-top: 10px;
  text-align: center;
}

